@@ -1,3 +1,5 @@
+- Added automatic SMBusspeed detection for lga1156 core i5/7 cpus
+- Added new iMac11,1 sbios default model for lga1156 core i5/17 mobos
 - md0 code. Notified xnu when an md ramdisk is specified
 - Added rollover image support for selected device icons.
   Use device_<type>_o.png in theme folder. Credits goes to Blackosx.
